# AiAssistantBackend

./: .env.example  .gitignore  README.md  ai_integration.py  alembic.ini  app.py  calendar_integration.py  database.py  docker-compose.yml  email_integration.py  flask_config.py  main.py  pyproject.toml  search.py
database/: core.py
database/migrations/: 1739834110_initial_user.py
database/models/: chat.py  user.py
migrations/: env.py
migrations/versions/: 16704bbfa078_initial_database_setup.py  cf516ed6e578_add_google_oauth_fields.py
models/: chat.py  chat_message.py  event_creation_parameters.py  incoming_chat_message.py  select_chat_message.py  user.py
old/database/migrations/: 1740404554_chat_and_chat_message.py
old/database/models/: chat.py  chat_message.py  user.py
old/static/css/: base.css
old/templates/: home_authenticated.html  home_unauthenticated.html
static/css/: base.css  home.css
templates/: google_callback.html  home_authenticated.html  home_unauthenticated.html
tests/manual/: email.py  generate_json.py  test_filter.py
tests/manual/benchmark/: ai_benchmark.py
